[package]
name = "tcp-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
tokio-util = { version = "0.6.3",features = ["full"] }
futures = { version = "0.3.0", features = ["thread-pool"]}
# 解析配置文件相关
toml = "0.4.5"
serde_derive = "1.0.32"
serde = "1.0.32"